# CS_installations

./: .gitignore  .gitmodules  .qualibrate  00_booting_rawADC.py  00_counting_single_channel.py  00_detect_count_single_channel.py  00_hello_qua.py  00_hello_qua_lfs.py  00_octave_calibration.py  00_octave_clock_and_calibration.py  00_octave_introduction.py  00_play_continuous_wave.py  00_raw_adc_traces.py  00_selective_pulse_power_rabi.py  00_simulate_spcm_count.py  00a_QuAM_init.py  00a_hello_qua.py  00b_cw_signal.py  00b_hello_qua.py  00c_repeated_readout_demod.py  01_adc_raw_trace.py  01_continuous.py  01_counting_live_single_channel.py  01_laser_alignment.py  01_manual_mixer_calibration.py  01_play_cw.py  01_raw_adc_traces.py  01_rf_switch_calib.py  01_sensor_gate_qdac2.py  01_simple_2D_QDAC.py  01_storage_spectroscopy.py  01_strange_waveform.py  01_tank_circuit_spectroscopy.py  01_test_cw.py  01_time_of_flight.py  01_turn_on.py  01_turn_on_measurements.py  01a_continuous.py  01a_test_cw.py  01a_time_of_flight_mw_fem.py  (+713 more)
.backups/: 05_resonator_spectroscopy_multiplexed.py  06b_resonator_spectroscopy_vs_flux.py  18_allxy.py
.calibrations/: 05_resonator_spectroscopy_multiplexed.py  06a_resonator_spectroscopy_vs_amplitude.py  07_qubit_spectroscopy_single.py  08a_qubit_spectroscopy_vs_flux.py  10_power_rabi_sequential.py  16_Ramsey_sequential.py
.configuration/: make_quam.py  make_wiring.py  qua_config.json
.devcontainer/: __devcontainer copy.json  __devcontainer_to_mount.json  devcontainer.json
.preparation/: 01_hello_qua.py  03_time_of_flight.py  05_resonator_spectroscopy_multiplexed.py  06_resonator_spectroscopy_vs_amplitude.py  14_T1.py  (+14 more)
(+4369 files in other folders)
