[tool.poetry]
name = "qua_config"
version = "0.1.0"
description = "Make config.py installable"
readme = "README.md"
authors = ["Hiro Inoue <hiroyuki.inoue@quantum-machines.co>"]
license = "BSD-3-Clause"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
qm_qua = "1.2.2a3"
qualang-tools = "0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
